--- a/Teams/teams.html
+++ b/Teams/teams.html
@@ -3,12 +3,103 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Card Glassmorphisms</title>
-    <link rel="stylesheet" href="teams.css" />
+    <title>Teams</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./Main.css/teams.css" />
   </head>
 
   <body>
-    <div class="container">
+    <div class="heading">
+      <h2>Team Members</h2>
+    <div class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img
+            src="./assests/tanu.jpeg"
+            alt=" "
+            style="width: 300px; height: 350px"
+          />
+        </div>
+        <div class="flip-card-back">
+          <h2>1.</h2>
+          <h1>TANU JAIN</h1>
+          <h3>FrontEnd Developer</h3>
+          <p>Worked As a- </p>
+              <a href="https://www.linkedin.com/in/tanu-jain-1b345818b" class="fa fa-linkedin"></a>
+        </div>
+      </div>
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img
+            src="./assests/sudhanshu.jpeg"
+            alt=" "
+            style="width: 300px; height: 350px"
+          />
+        </div>
+        <div class="flip-card-back">
+          <h2>2.</h2>
+          <h1>SUDHANSHU GUPTA</h1>
+          <h3>FrontEnd Developer</h3>
+          <p>Worked As a- </p>
+          <a href="https://www.linkedin.com/in/sudhanshu-gupta-68974217a" class="fa fa-linkedin"></a>
+        </div>
+      </div>
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img
+            src="./assests/tanisha.jpeg"
+            alt=" "
+            style="width: 300px; height: 350px"
+          />
+        </div>
+        <div class="flip-card-back">
+          <h2>3.</h2>
+          <h1>TANISHA AGARWAL</h1>
+          <h3>FrontEnd Developer</h3>
+          <p>Worked As a- </p>
+          <a href="https://www.linkedin.com/in/tanisha-agarwal-485a1419b" class="fa fa-linkedin"></a>
+        </div>
+      </div>
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img
+            src="./assests/swap.jpeg"
+            alt=" "
+            style="width: 300px; height: 350px"
+          />
+        </div>
+        <div class="flip-card-back">
+          <h2>4.</h2>
+          <h1>SWAPNIL UPADHYAY</h1>
+          <h3>FrontEnd Developer</h3>
+          <p>Worked As a- </p>
+          <a href="https://www.linkedin.com/in/swapnil-upadhyay-1b6727173" class="fa fa-linkedin"></a>
+        </div>
+      </div>
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img
+            src="./assests/tanya.jpeg"
+            alt=" "
+            style="width: 300px; height: 350px"
+          />
+        </div>
+        <div class="flip-card-back">
+          <h2>5.</h2>
+          <h1>TANYA AGARWAL</h1>
+          <h3>FrontEnd Developer</h3>
+          <p>Worked As a- </p>
+          <a href="https://www.linkedin.com/in/tanya-agarwal-92641616a" class="fa fa-linkedin"></a>
+        </div>
+      </div>
+    </div>
+    </div>
+  </body>
+  </html>
+  
+    <!-- <div class="container">
       <div class="card">
         <div class="content">
           <h2>1.</h2>
@@ -17,26 +108,29 @@
         </div>
         <div class="container-back">
           <h2>Tanu Jain</h2>
-          <h4>Front-End Developer</h4>
+          <h4>FrontEnd Developer</h4>
           <a href="https://www.linkedin.com/in/tanu-jain-1b345818b">Read More</a> -->
-
+    <!-- 
         </div>
       </div>
       <div class="card">
-        <div class="content">
-          <!-- <h2>2.</h2>
-          <h3>SUDHANSHU GUPTA</h3>
-          <p>
-            Facebook is a social networking service and website started in
-            Februar 2004. It was built by Mark Zuckerberg. It is owned by
-            Facebook, Inc. As of September 2012.
-          </p>
-          <a href="https://about.fb.com/">Read More</a> -->
-        </div>
-      </div>
+        <div class="content"> -->
+    <!-- <div class="flip-card">
+            <div class="flip-card-inner"> -->
+    <!-- <div class="content"> -->
+    <!-- <h2>2.</h2>
+                <img src="./assests/sudhanshu.jpeg" alt="Avatar" style="width:300px;height:300px;">
+              </div>
+              <div class="flip-card-back">
+                <h3>Sudhanshu Gupta</h3> 
+                <h4>FrontEnd Developer</h4> 
+                <p>We love that guy</p>
+              </div>
+            </div>
+          </div>
       <div class="card">
-        <div class="content">
-          <!-- <h2>3.</h2>
+        <div class="content"> -->
+    <!-- <h2>3.</h2>
           <h3>TANYA AGARWAL</h3>
           <p>
             Facebook is a social networking service and website started in
@@ -44,11 +138,11 @@
             Facebook, Inc. As of September 2012.
           </p>
           <a href="https://about.fb.com/">Read More</a> -->
-        </div>
+    <!-- </div>
       </div>
       <div class="card">
-        <div class="content">
-          <!-- <h2>4.</h2>
+        <div class="content"> -->
+    <!-- <h2>4.</h2>
           <h3>TANISHA AGARWAL</h3>
           <p>
             Today, LinkedIn leads a diversified business with revenues from
@@ -56,11 +150,11 @@
             solutions under the leadership of Ryan Roslansky.
           </p>
           <a href="https://about.linkedin.com/">Read More</a> -->
-        </div>
+    <!-- </div>
       </div>
       <div class="card">
-        <div class="content">
-          <!-- <h2>5.</h2>
+        <div class="content"> -->
+    <!-- <h2>5.</h2>
           <h3>SWAPNIL UPADHYAY</h3>
           <p>
             Instagram is a social networking app for sharing photos, reels, IGTV
@@ -68,9 +162,10 @@
             connected via a 'followers' list.
           </p>
           <a href="https://about.instagram.com/">Read More</a> -->
-        </div>
+    <!-- </div>
       </div>
-    </div>
+    </div> -->
+
     <!-- <script type="text/javascript" src="vanilla-tilt.js"></script>
     <script>
       VanillaTilt.init(document.querySelectorAll(".card"), {
@@ -80,5 +175,3 @@
         "max-glare": 1,
       });
     </script> -->
-  </body>
-</html>
